@@ -1056,7 +1056,7 @@ INSERT INTO site
 	('zippath',''),
 	('lookuppar2','0'),
 	('delaytime', '2'),
-	('sqlpatch','112');
+	('sqlpatch','113');
 
 
 DROP TABLE IF EXISTS logging;
@@ -1384,7 +1384,7 @@ DROP TABLE IF EXISTS nzbs;
 CREATE TABLE nzbs (
 	message_id varchar(255) COLLATE utf8_unicode_ci NOT NULL DEFAULT '',
 	groupname varchar(255) COLLATE utf8_unicode_ci NOT NULL DEFAULT '0',
-	`article-number` varchar(255) COLLATE utf8_unicode_ci NOT NULL DEFAULT '0',
+	articlenumber varchar(255) COLLATE utf8_unicode_ci NOT NULL DEFAULT '0',
 	subject varchar(1000) COLLATE utf8_unicode_ci NOT NULL DEFAULT '0',
 	collectionhash varchar(255) COLLATE utf8_unicode_ci NOT NULL DEFAULT '0',
 	filesize bigint(20) unsigned NOT NULL DEFAULT '0',
