@@ -340,7 +340,7 @@ DROP TABLE IF EXISTS "nzbs" CASCADE;
 CREATE TABLE "nzbs" (
   "message_id" character varying(255) DEFAULT ''::character varying NOT NULL,
   "groupname" character varying(255) DEFAULT '0'::character varying NOT NULL,
-  "article-number" character varying(255) DEFAULT '0'::character varying NOT NULL,
+  "articlenumber" character varying(255) DEFAULT '0'::character varying NOT NULL,
   "subject" character varying(1000) DEFAULT '0'::character varying NOT NULL,
   "collectionhash" character varying(255) DEFAULT '0'::character varying NOT NULL,
   "filesize" numeric(20, 0) DEFAULT 0 NOT NULL,
@@ -1376,7 +1376,7 @@ INSERT INTO site
 	('zippath',''),
 	('lookuppar2','0'),
 	('delaytime','2'),
-	('sqlpatch','112');
+	('sqlpatch','113');
 
 
 INSERT INTO tmux (setting, value) values ('DEFRAG_CACHE','900'),
