@@ -51,7 +51,7 @@ if ( $hashcheck != '1' )
 	exit(1);
 }
 
-if ( $patch < '112' )
+if ( $patch < '113' )
 {
 	echo "\033[1;33mYour database is not up to date. Please update.\n";
 	echo "php ${DIR}testing/DB_scripts/patchDB.php\033[0m\n";
